todo_app/overlays/staging/resources/route_frontend_staging.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-frontend-route
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todoapp-staging
    backendRefs:
    - name: todoapp-frontend-svc
      port: 2345
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
  - matches:
    - path:
        type: PathPrefix
        value: /_next
    backendRefs:
    - name: todoapp-frontend-svc
      port: 2345
